--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.jcalendar-1.4.jar=C:\\Users\\usuario\\Desktop\\lib\\jcalendar-1.3.3.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Emiliano\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
