--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,12 +32,14 @@ excludes=
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\usuario\\Desktop\\lib\\jcalendar-1.3.3.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Emiliano\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Emiliano\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.RSScaleLabel.jar=C:\\Users\\Emiliano\\Desktop\\RSScaleLabel.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.RSScaleLabel.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
