--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.jcalendar-1.3.3.jar=C:\\Users\\usuario\\Desktop\\lib\\jcalendar-1
 file.reference.jcalendar-1.4.jar=C:\\Users\\Emiliano\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Emiliano\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mail.jar=C:\\Users\\usuario\\Desktop\\Ejecutables\\javamail-1.4.5\\mail.jar
+file.reference.RSScaleLabel.jar-1=C:\\Users\\usuario\\Desktop\\RSScaleLabel.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -126,7 +127,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.RSScaleLabel.jar}
+    ${file.reference.RSScaleLabel.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.RSScaleLabel.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
