--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,14 @@ dist.jar=${dist.dir}/Mascota.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.java-mail-1.4.4.jar=C:\\Users\\Emi\\Desktop\\java-mail-1.4.4.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\usuario\\Desktop\\lib\\jcalendar-1.3.3.jar
+file.reference.jcalendar-1.3.3.jar-1=C:\\Users\\Emi\\Desktop\\jcalendar-1.3.3.jar\\jcalendar-1.3.3.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Emiliano\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Emiliano\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mail.jar=C:\\Users\\usuario\\Desktop\\Ejecutables\\javamail-1.4.5\\mail.jar
 file.reference.RSScaleLabel.jar-1=C:\\Users\\usuario\\Desktop\\RSScaleLabel.jar
+file.reference.RSScaleLabel.jar-2=C:\\Users\\Emi\\Desktop\\RSScaleLabel.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -129,7 +132,10 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.RSScaleLabel.jar}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.RSScaleLabel.jar-1}
+    ${file.reference.RSScaleLabel.jar-1}:\
+    ${file.reference.java-mail-1.4.4.jar}:\
+    ${file.reference.RSScaleLabel.jar-2}:\
+    ${file.reference.jcalendar-1.3.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
